--- a/index.html
+++ b/index.html
@@ -1,3 +1,43 @@
+<body class="bg-gray-100 min-h-screen">
+
+    <div id="loginView" class="flex items-center justify-center min-h-screen">
+        <div class="bg-white p-8 rounded-2xl shadow-xl max-w-sm w-full">
+            <h2 class="text-3xl font-bold text-center text-blue-800 mb-6">Ingreso al Sistema</h2>
+            <form id="loginForm" class="space-y-4">
+                <input type="email" id="email" placeholder="Correo Electrónico" class="w-full px-4 py-2 border-2 rounded-lg" required>
+                <input type="password" id="password" placeholder="Contraseña" class="w-full px-4 py-2 border-2 rounded-lg" required>
+                <button type="submit" class="w-full bg-blue-600 text-white font-bold py-2 px-4 rounded-lg">Ingresar</button>
+            </form>
+            <div id="loginMessage" class="text-center font-bold mt-4"></div>
+        </div>
+    </div>
+
+    <div id="dashboardView" class="hidden min-h-screen w-full">
+        <header class="bg-blue-800 text-white p-4 shadow-lg flex justify-between items-center">
+            <h1 class="text-2xl font-bold">📦 Dashboard de Ventas</h1>
+            <button id="logoutBtn" class="bg-blue-600 hover:bg-blue-500 font-semibold py-2 px-4 rounded-lg">Salir</button>
+        </header>
+
+        <main class="p-4 sm:p-8 max-w-7xl mx-auto">
+            <section class="bg-white p-6 rounded-2xl shadow-lg">
+                <h2 class="text-2xl font-semibold text-blue-700 mb-4">Historial de Ventas</h2>
+                <div class="overflow-x-auto rounded-lg border">
+                    <table class="min-w-full divide-y">
+                        <thead class="bg-gray-50">
+                            <tr>
+                                <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase">Fecha</th>
+                                <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase">Total</th>
+                                <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase">Cliente</th>
+                                <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase">Atendido por</th>
+                            </tr>
+                        </thead>
+                        <tbody id="salesTableBody" class="bg-white divide-y">
+                            </tbody>
+                    </table>
+                </div>
+            </section>
+        </main>
+    </div>
 <script>
     // 1. --- CONFIGURACIÓN ---
     const SUPABASE_URL = 'https://ccfgclymyeciqbgrdfuf.supabase.co'; 
@@ -100,3 +140,4 @@
         }
     }
 </script>
+</body>
