--- a/index.html
+++ b/index.html
@@ -1,143 +1,72 @@
-<body class="bg-gray-100 min-h-screen">
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+    <title>Prueba de Login</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <style>
+        body { font-family: 'Inter', sans-serif; }
+    </style>
+</head>
+<body class="bg-gray-100 flex items-center justify-center min-h-screen">
 
-    <div id="loginView" class="flex items-center justify-center min-h-screen">
-        <div class="bg-white p-8 rounded-2xl shadow-xl max-w-sm w-full">
-            <h2 class="text-3xl font-bold text-center text-blue-800 mb-6">Ingreso al Sistema</h2>
-            <form id="loginForm" class="space-y-4">
-                <input type="email" id="email" placeholder="Correo Electrónico" class="w-full px-4 py-2 border-2 rounded-lg" required>
-                <input type="password" id="password" placeholder="Contraseña" class="w-full px-4 py-2 border-2 rounded-lg" required>
-                <button type="submit" class="w-full bg-blue-600 text-white font-bold py-2 px-4 rounded-lg">Ingresar</button>
-            </form>
-            <div id="loginMessage" class="text-center font-bold mt-4"></div>
-        </div>
+    <div class="bg-white p-8 rounded-2xl shadow-xl max-w-sm w-full">
+        <h2 class="text-3xl font-bold text-center text-blue-800 mb-6">Prueba de Login</h2>
+        <form id="loginForm" class="space-y-4">
+            <input type="email" id="email" placeholder="Correo Electrónico" class="w-full px-4 py-2 border-2 rounded-lg" required>
+            <input type="password" id="password" placeholder="Contraseña" class="w-full px-4 py-2 border-2 rounded-lg" required>
+            <button type="submit" class="w-full bg-blue-600 text-white font-bold py-2 px-4 rounded-lg">Ingresar</button>
+        </form>
+        <div id="message" class="text-center font-bold mt-4"></div>
     </div>
 
-    <div id="dashboardView" class="hidden min-h-screen w-full">
-        <header class="bg-blue-800 text-white p-4 shadow-lg flex justify-between items-center">
-            <h1 class="text-2xl font-bold">📦 Dashboard de Ventas</h1>
-            <button id="logoutBtn" class="bg-blue-600 hover:bg-blue-500 font-semibold py-2 px-4 rounded-lg">Salir</button>
-        </header>
-
-        <main class="p-4 sm:p-8 max-w-7xl mx-auto">
-            <section class="bg-white p-6 rounded-2xl shadow-lg">
-                <h2 class="text-2xl font-semibold text-blue-700 mb-4">Historial de Ventas</h2>
-                <div class="overflow-x-auto rounded-lg border">
-                    <table class="min-w-full divide-y">
-                        <thead class="bg-gray-50">
-                            <tr>
-                                <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase">Fecha</th>
-                                <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase">Total</th>
-                                <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase">Cliente</th>
-                                <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase">Atendido por</th>
-                            </tr>
-                        </thead>
-                        <tbody id="salesTableBody" class="bg-white divide-y">
-                            </tbody>
-                    </table>
-                </div>
-            </section>
-        </main>
-    </div>
 <script>
     // 1. --- CONFIGURACIÓN ---
+    // ⚠️ Reemplaza con tus propias credenciales de Supabase
     const SUPABASE_URL = 'https://ccfgclymyeciqbgrdfuf.supabase.co'; 
     const SUPABASE_ANON_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImNjZmdjbHlteWVjaXFiZ3JkZnVmIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTY4NTcwODQsImV4cCI6MjA3MjQzMzA4NH0.hN5kiIxFa4FAzsI4UWJGcKQyTTu30dk6M6ybN-PQ2GM';
-    const API_URL = 'https://farmacia-269414280318.europe-west1.run.app';
+const API_URL = 'https://farmacia-269414280318.europe-west1.run.app';
 
+    // CORRECCIÓN: Usar 'supabaseClient' para evitar el conflicto de nombres
     const supabaseClient = supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
 
     // --- ELEMENTOS DEL DOM ---
-    const loginView = document.getElementById('loginView');
-    const dashboardView = document.getElementById('dashboardView');
     const loginForm = document.getElementById('loginForm');
-    const loginMessageDiv = document.getElementById('loginMessage');
-    const logoutBtn = document.getElementById('logoutBtn');
-    const salesTableBody = document.getElementById('salesTableBody');
+    const messageDiv = document.getElementById('message');
 
-    // --- LÓGICA DE AUTENTICACIÓN Y VISTAS ---
+    // --- LÓGICA DEL LOGIN ---
     loginForm.addEventListener('submit', async (e) => {
         e.preventDefault();
-        loginMessageDiv.textContent = 'Procesando...';
-        loginMessageDiv.className = 'text-center font-bold mt-4 text-gray-500';
+        
+        messageDiv.textContent = 'Procesando...';
+        messageDiv.className = 'text-center font-bold mt-4 text-gray-500';
 
         const email = document.getElementById('email').value;
         const password = document.getElementById('password').value;
 
-        const { data, error } = await supabaseClient.auth.signInWithPassword({ email, password });
+        // Intentar iniciar sesión con Supabase
+        const { data, error } = await supabaseClient.auth.signInWithPassword({
+            email: email,
+            password: password,
+        });
 
         if (error) {
-            loginMessageDiv.textContent = `Error: ${error.message}`;
-            loginMessageDiv.classList.add('text-red-500');
+            // Si hay un error, mostrarlo en rojo
+            messageDiv.textContent = `Error: ${error.message}`;
+            messageDiv.classList.remove('text-gray-500');
+            messageDiv.classList.add('text-red-500');
+            console.error(error);
         } else {
-            // Login exitoso, no necesitamos mostrar mensaje aquí.
-            // onAuthStateChange se encargará de mostrar el dashboard.
+            // Si el login es exitoso, mostrar mensaje de éxito en verde
+            messageDiv.textContent = '✅ ¡Login Exitoso!';
+            messageDiv.classList.remove('text-gray-500');
+            messageDiv.classList.add('text-green-500');
+            console.log(data);
         }
     });
-
-    logoutBtn.addEventListener('click', () => {
-        supabaseClient.auth.signOut();
-    });
-
-    // Función para cambiar entre la vista de login y el dashboard
-    const handleAuthStateChange = async (session) => {
-        if (session) {
-            // Si hay sesión, mostrar dashboard y cargar datos
-            loginView.classList.add('hidden');
-            dashboardView.classList.remove('hidden');
-            await renderSales();
-        } else {
-            // Si no hay sesión, mostrar la vista de login
-            loginView.classList.remove('hidden');
-            dashboardView.classList.add('hidden');
-        }
-    };
-
-    // Escuchar cambios de sesión (login, logout)
-    supabaseClient.auth.onAuthStateChange((_event, session) => {
-        handleAuthStateChange(session);
-    });
-
-    // --- LÓGICA PARA CARGAR DATOS ---
-    async function apiFetch(endpoint, options = {}) {
-        const { data: { session } } = await supabaseClient.auth.getSession();
-        if (!session) throw new Error("No estás autenticado.");
-
-        const headers = { 
-            'Content-Type': 'application/json',
-            'Authorization': `Bearer ${session.access_token}`
-        };
-        const finalUrl = `${API_URL.replace(/\/$/, '')}/${endpoint.replace(/^\//, '')}`;
-        const response = await fetch(finalUrl, { ...options, headers: { ...headers, ...options.headers } });
-
-        if (!response.ok) {
-            const errorText = await response.text();
-            throw new Error(`Error de la API (${response.status}): ${errorText}`);
-        }
-        return response.json();
-    }
-
-    async function renderSales() {
-        try {
-            salesTableBody.innerHTML = `<tr><td colspan="4" class="p-4 text-center">Cargando ventas...</td></tr>`;
-            const ventas = await apiFetch('/ventas');
-            
-            if (ventas.length === 0) {
-                salesTableBody.innerHTML = `<tr><td colspan="4" class="p-4 text-center">No hay ventas registradas.</td></tr>`;
-                return;
-            }
-
-            salesTableBody.innerHTML = ventas.map(v => `
-                <tr class="hover:bg-gray-50">
-                    <td class="px-6 py-4">${new Date(v.fecha).toLocaleString()}</td>
-                    <td class="px-6 py-4">$${v.total_venta.toFixed(2)}</td>
-                    <td class="px-6 py-4">${v.clientes ? v.clientes.nombre + ' ' + v.clientes.apellido : 'Público General'}</td>
-                    <td class="px-6 py-4">${v.perfiles ? v.perfiles.nombre + ' ' + v.perfiles.apellido : 'N/A'}</td>
-                </tr>
-            `).join('');
-        } catch (error) {
-            console.error('Error al cargar ventas:', error);
-            salesTableBody.innerHTML = `<tr><td colspan="4" class="p-4 text-center text-red-500">${error.message}</td></tr>`;
-        }
-    }
 </script>
+
 </body>
+</html>
