--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-    <title>Sistema de Ventas v2</title>
+    <title>Sistema de Ventas v2 - Corregido</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         body { font-family: 'Inter', sans-serif; }
@@ -50,7 +50,7 @@
 <script>
     // --- 1. CONFIGURACIÓN ---
     const SUPABASE_URL = 'https://ccfgclymyeciqbgrdfuf.supabase.co'; 
-    const SUPABASE_ANON_KEY = 'eyJhbGciOiJIUzINiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImNjZmdjbHlteWVjaXFiZ3JkZnVmIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTY4NTcwODQsImV4cCI6MjA3MjQzMzA4NH0.hN5kiIxFa4FAzsI4UWJGcKQyTTu30dk6M6ybN-PQ2GM';
+    const SUPABASE_ANON_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImNjZmdjbHlteWVjaXFiZ3JkZnVmIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTY4NTcwODQsImV4cCI6MjA3MjQzMzA4NH0.hN5kiIxFa4FAzsI4UWJGcKQyTTu30dk6M6ybN-PQ2GM';
     const API_URL = 'https://farmacia-269414280318.europe-west1.run.app';
 
     const supabaseClient = supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
@@ -68,8 +68,18 @@
     const modalBody = document.getElementById('modalBody');
 
     // --- 3. FUNCIONES ---
-    const showDashboard = (session) => { /* ... (código sin cambios) ... */ };
-    const showLoginView = () => { /* ... (código sin cambios) ... */ };
+    const showDashboard = (session) => {
+        currentUserSession = session;
+        loginView.classList.add('hidden');
+        dashboardView.classList.remove('hidden');
+    };
+
+    const showLoginView = () => {
+        currentUserSession = null;
+        loginView.classList.remove('hidden');
+        dashboardView.classList.add('hidden');
+    };
+
     const openModal = () => saleModal.classList.remove('hidden');
     const closeModal = () => saleModal.classList.add('hidden');
     window.closeModal = closeModal;
@@ -84,15 +94,24 @@
         modalBody.appendChild(form);
         openModal();
     };
-    
+
     // --- 4. LÓGICA DE EVENTOS ---
-    loginForm.addEventListener('submit', async (e) => { /* ... (código sin cambios) ... */ });
-    logoutBtn.addEventListener('click', async () => { /* ... (código sin cambios) ... */ });
+    loginForm.addEventListener('submit', async (e) => {
+        e.preventDefault();
+        loginMessageDiv.textContent = 'Procesando...';
+        const { email, password } = Object.fromEntries(new FormData(e.target));
+        const { error } = await supabaseClient.auth.signInWithPassword({ email, password });
+        if (error) {
+            loginMessageDiv.textContent = `Error: Credenciales incorrectas.`;
+        }
+    });
+
+    logoutBtn.addEventListener('click', async () => {
+        await supabaseClient.auth.signOut();
+    });
 
     showSaleModalBtn.addEventListener('click', async () => {
         try {
-            // Paso 1: Llamar a la API para obtener los medicamentos
-            loginMessageDiv.textContent = 'Cargando medicamentos...';
             const medicamentos = await fetch(`${API_URL}/medicamentos`, {
                 headers: { 'Authorization': `Bearer ${currentUserSession.access_token}` }
             }).then(res => res.json());
@@ -102,7 +121,6 @@
                 return;
             }
 
-            // Paso 2: Construir las opciones del <select>
             const medOptions = medicamentos.map(m => `<option value="${m.id}">${m.nombre} (${m.presentacion})</option>`).join('');
 
             const formHtml = `
@@ -112,11 +130,40 @@
                 <button type="submit" class="w-full bg-yellow-600 text-white font-bold py-2 px-4 rounded mt-4">Confirmar Venta</button>
             `;
             
-            const onSubmit = async (e) => { /* ... (lógica de envío sin cambios) ... */ };
+            const onSubmit = async (e) => {
+                const formData = new FormData(e.target);
+                const clienteId = formData.get('clienteId');
+                const items = Array.from(document.querySelectorAll('.sale-item')).map(item => ({
+                    medicamento_id: parseInt(item.querySelector('[name=medicamentoId]').value),
+                    cantidad: parseInt(item.querySelector('[name=cantidad]').value)
+                }));
+
+                const ventaData = {
+                    usuarioId: currentUserSession.user.id,
+                    clienteId: clienteId ? parseInt(clienteId) : null,
+                    items: items
+                };
+
+                try {
+                    const response = await fetch(`${API_URL}/ventas`, {
+                        method: 'POST',
+                        headers: { 'Content-Type': 'application/json', 'Authorization': `Bearer ${currentUserSession.access_token}` },
+                        body: JSON.stringify(ventaData)
+                    });
+                    const result = await response.json();
+                    if (!response.ok) {
+                        const errorDetail = JSON.parse(result.detail);
+                        throw new Error(errorDetail.message || 'Error desconocido.');
+                    }
+                    alert(`Venta registrada con éxito! ID: ${result.venta_id}, Total: $${result.total_calculado}`);
+                    closeModal();
+                } catch (error) {
+                    alert(`Error al registrar la venta: ${error.message}`);
+                }
+            };
 
             showFormModal("Registrar Venta", formHtml, onSubmit);
 
-            // Lógica para añadir items dinámicamente, ahora con el <select>
             const itemsContainer = document.getElementById('saleItemsContainer');
             const addItemBtn = document.getElementById('addItemBtn');
             const addItem = () => {
@@ -129,55 +176,21 @@
                 itemsContainer.appendChild(itemDiv);
             };
 
-            addItem(); // Añadir el primer item
+            addItem();
             addItemBtn.addEventListener('click', addItem);
-
         } catch (error) {
             alert(`Error al cargar los medicamentos: ${error.message}`);
         }
     });
 
     // --- 5. INICIALIZACIÓN ---
-    supabaseClient.auth.onAuthStateChange((_event, session) => { /* ... (código sin cambios) ... */ });
-
-    // --- Rellenar funciones omitidas para que el código sea completo ---
-    showDashboard = (session) => { currentUserSession = session; loginView.classList.add('hidden'); dashboardView.classList.remove('hidden'); };
-    showLoginView = () => { currentUserSession = null; loginView.classList.remove('hidden'); dashboardView.classList.add('hidden'); };
-    loginForm.addEventListener('submit', async (e) => { e.preventDefault(); loginMessageDiv.textContent = 'Procesando...'; const { email, password } = Object.fromEntries(new FormData(e.target)); const { error } = await supabaseClient.auth.signInWithPassword({ email, password }); if (error) { loginMessageDiv.textContent = `Error: Credenciales incorrectas.`; } });
-    logoutBtn.addEventListener('click', async () => { await supabaseClient.auth.signOut(); });
-    supabaseClient.auth.onAuthStateChange((_event, session) => { if (session) { showDashboard(session); } else { showLoginView(); } });
-    const onSubmit = async (e) => {
-        const formData = new FormData(e.target);
-        const clienteId = formData.get('clienteId');
-        const items = Array.from(document.querySelectorAll('.sale-item')).map(item => ({
-            medicamento_id: parseInt(item.querySelector('[name=medicamentoId]').value),
-            cantidad: parseInt(item.querySelector('[name=cantidad]').value)
-        }));
-
-        const ventaData = {
-            usuarioId: currentUserSession.user.id,
-            clienteId: clienteId ? parseInt(clienteId) : null,
-            items: items
-        };
-
-        try {
-            const response = await fetch(`${API_URL}/ventas`, {
-                method: 'POST',
-                headers: { 'Content-Type': 'application/json', 'Authorization': `Bearer ${currentUserSession.access_token}` },
-                body: JSON.stringify(ventaData)
-            });
-            const result = await response.json();
-            if (!response.ok) {
-                const errorDetail = JSON.parse(result.detail);
-                throw new Error(errorDetail.message || 'Error desconocido.');
-            }
-            alert(`Venta registrada con éxito! ID: ${result.venta_id}, Total: $${result.total_calculado}`);
-            closeModal();
-        } catch (error) {
-            alert(`Error al registrar la venta: ${error.message}`);
+    supabaseClient.auth.onAuthStateChange((_event, session) => {
+        if (session) {
+            showDashboard(session);
+        } else {
+            showLoginView();
         }
-    };
-
+    });
 </script>
 
 </body>
