--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-    <title>Sistema de Ventas con LitElement</title>
+    <script type="module" src="https://cdn.jsdelivr.net/npm/lit@3/index.js"></script>
+    <title>Sistema de Ventas - Final</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <style> body { font-family: 'Inter', sans-serif; } </style>
+    <style>
+        body { font-family: 'Inter', sans-serif; }
+    </style>
 </head>
 <body class="bg-gray-100">
 
@@ -34,10 +37,11 @@
         </main>
     </div>
 
-    <sale-modal></sale-modal>
+    <!-- Componente Modal de Ventas -->
+    <sale-modal id="saleModal"></sale-modal>
 
 <script type="module">
-    // Importamos la clase de nuestro componente
+    // Importar el componente SaleModal
     import { SaleModal } from './sale-modal.js';
 
     // --- 1. CONFIGURACIÓN ---
@@ -55,41 +59,85 @@
     const loginMessageDiv = document.getElementById('loginMessage');
     const logoutBtn = document.getElementById('logoutBtn');
     const showSaleModalBtn = document.getElementById('showSaleModalBtn');
-    const saleModalElement = document.querySelector('sale-modal');
+    const saleModal = document.getElementById('saleModal');
 
     // --- 3. FUNCIONES ---
-    const showDashboard = (session) => {
-        currentUserSession = session;
-        loginView.classList.add('hidden');
-        dashboardView.classList.remove('hidden');
-    };
-    const showLoginView = () => {
-        currentUserSession = null;
-        loginView.classList.remove('hidden');
-        dashboardView.classList.add('hidden');
+    const showDashboard = (session) => { 
+        currentUserSession = session; 
+        loginView.classList.add('hidden'); 
+        dashboardView.classList.remove('hidden'); 
     };
     
+    const showLoginView = () => { 
+        currentUserSession = null; 
+        loginView.classList.remove('hidden'); 
+        dashboardView.classList.add('hidden'); 
+    };
+
     // --- 4. LÓGICA DE EVENTOS ---
     loginForm.addEventListener('submit', async (e) => {
         e.preventDefault();
         loginMessageDiv.textContent = 'Procesando...';
-        const { email, password } = Object.fromEntries(new FormData(e.target));
-        const { error } = await supabaseClient.auth.signInWithPassword({ email, password });
-        if (error) { loginMessageDiv.textContent = `Error: Credenciales incorrectas.`; }
+        const email = document.getElementById('email').value;
+        const password = document.getElementById('password').value;
+        const { data, error } = await supabaseClient.auth.signInWithPassword({ email, password });
+        if (error) { 
+            loginMessageDiv.textContent = `Error: Credenciales incorrectas.`; 
+        }
     });
 
-    logoutBtn.addEventListener('click', () => supabaseClient.auth.signOut());
+    logoutBtn.addEventListener('click', async () => {
+        await supabaseClient.auth.signOut();
+    });
 
-    showSaleModalBtn.addEventListener('click', () => {
-        // Le pasamos los datos necesarios al componente y lo abrimos
-        saleModalElement.session = currentUserSession;
-        saleModalElement.apiUrl = API_URL;
-        saleModalElement.open();
+    showSaleModalBtn.addEventListener('click', async () => {
+        try {
+            // Obtener datos necesarios para el modal
+            const [medicamentos, clientes] = await Promise.all([
+                fetch(`${API_URL}/medicamentos`, { 
+                    headers: { 'Authorization': `Bearer ${currentUserSession.access_token}` } 
+                }).then(res => res.json()),
+                fetch(`${API_URL}/clientes`, { 
+                    headers: { 'Authorization': `Bearer ${currentUserSession.access_token}` } 
+                }).then(res => res.json())
+            ]);
+
+            if (!medicamentos || medicamentos.length === 0) {
+                alert("No hay medicamentos disponibles para la venta.");
+                return;
+            }
+
+            // Configurar el componente modal con los datos
+            saleModal.medicamentos = medicamentos;
+            saleModal.clientes = clientes;
+            saleModal.currentUserSession = currentUserSession;
+            saleModal.apiUrl = API_URL;
+            
+            // Abrir el modal
+            saleModal.open();
+
+        } catch (error) {
+            alert(`Error al cargar datos: ${error.message}`);
+        }
+    });
+
+    // Escuchar eventos del componente modal
+    saleModal.addEventListener('sale-completed', (e) => {
+        const { venta_id, total } = e.detail;
+        alert(`Venta registrada con éxito! ID: ${venta_id}, Total: $${total}`);
+    });
+
+    saleModal.addEventListener('modal-closed', () => {
+        console.log('Modal cerrado');
     });
 
     // --- 5. INICIALIZACIÓN ---
     supabaseClient.auth.onAuthStateChange((_event, session) => {
-        if (session) { showDashboard(session); } else { showLoginView(); }
+        if (session) { 
+            showDashboard(session); 
+        } else { 
+            showLoginView(); 
+        }
     });
 </script>
 
