--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-    <script type="module" src="https://cdn.jsdelivr.net/npm/lit@3/index.js"></script>
+    <script src="https://unpkg.com/lit@3/index.js"></script>
     <title>Sistema de Ventas - Final</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
@@ -40,10 +40,9 @@
     <!-- Componente Modal de Ventas -->
     <sale-modal id="saleModal"></sale-modal>
 
-<script type="module">
-    // Importar el componente SaleModal
-    import { SaleModal } from './sale-modal.js';
-
+<script>
+    // El componente se cargará después de que LitElement esté disponible
+    
     // --- 1. CONFIGURACIÓN ---
     const SUPABASE_URL = 'https://ccfgclymyeciqbgrdfuf.supabase.co'; 
     const SUPABASE_ANON_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImNjZmdjbHlteWVjaXFiZ3JkZnVmIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTY4NTcwODQsImV4cCI6MjA3MjQzMzA4NH0.hN5kiIxFa4FAzsI4UWJGcKQyTTu30dk6M6ybN-PQ2GM';
