--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <div id="loginView" class="flex items-center justify-center min-h-screen">
         <div class="bg-white p-8 rounded-2xl shadow-xl max-w-sm w-full">
-            <h2 class="text-3xl font-bold text-center text-blue-800 mb-6">Ingreso al Sistema</h2>
+            <h2 class="text-3xl font-bold text-center text-blue-800 mb-6">LOGIN</h2>
             <form id="loginForm" class="space-y-4">
                 <input type="email" id="email" placeholder="Correo Electrónico" class="w-full px-4 py-2 border-2 rounded-lg" required>
                 <input type="password" id="password" placeholder="Contraseña" class="w-full px-4 py-2 border-2 rounded-lg" required>
